syntax = "proto3";
package send;

service Send {
  rpc Send (SendRequest) returns (SendResponse);
}

message SendRequest {
  string peer_id = 1;
  bytes payload = 2;
}

message SendResponse {
  repeated string intermediate_peer_ids = 1;
}